<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>demo</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <!-- Used only by this module: compile with JDK 21 while Maven/JAVA_HOME stay on 8. Override: -Djdk21.home=... -->
        <jdk21.home>C:/Program Files/Amazon Corretto/jdk21.0.10_7</jdk21.home>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <fork>true</fork>
                    <executable>${jdk21.home}/bin/javac</executable>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>